fix shift container

--- a/src/components/05-components/v3-pat/shift-container/_styles.scss
+++ b/src/components/05-components/v3-pat/shift-container/_styles.scss
@@ -111,6 +111,8 @@
 
 		&_Wrapper {
 			border-top: 1px solid $light-grey;
+			min-width: -webkit-fill-available;
+			width: fit-content !important;
 		}
 
 		.FlagLine {
