--- a/src/components/08-pages/_clinician-home-ui.scss
+++ b/src/components/08-pages/_clinician-home-ui.scss
@@ -105,6 +105,7 @@
 
 // Used in the patient visit context (e.g. Progress Notes)
 .PageButtonAction {
+	line-height: 36px;
 	margin-top: -58px;
 	min-height: 36px;
 }
